--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -1,5 +1,5 @@
 variables:
-    SolutionBaseName: '__SolutionBaseName__'
+    SolutionBaseName: 'DFC.Content.Pkg.Netcore'
     BuildPlatform: 'any cpu'
     BuildConfiguration: 'release'
 
@@ -26,6 +26,7 @@ stages:
     - template: AzureDevOpsTemplates\Build\StepTemplates\dfc-dotnetcore-build-sonar.yml@dfc-devops
       parameters:
         SolutionBaseName: $(SolutionBaseName)
-        BuildPlatform: $(BuildPlatform)
-        BuildConfiguration: $(BuildConfiguration)
+        BuildPlatform: 'any cpu'
+        BuildConfiguration: 'release'
         DotNetCoreVersion: '3.1.100'
+        TestSuffix: 'UnitTests'
