--- a/dfc-content-pkg-netcore.ApiProcessorService.UnitTests/dfc-content-pkg-netcore.ApiProcessorService.UnitTests.csproj
+++ b/dfc-content-pkg-netcore.ApiProcessorService.UnitTests/dfc-content-pkg-netcore.ApiProcessorService.UnitTests.csproj
@@ -2,18 +2,33 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>dfc_content_pkg_netcore.ApiProcessorService.UnitTests</RootNamespace>
-
-    <IsPackable>false</IsPackable>
+    <RootNamespace>DFC.Content.Pkg.Netcore.ApiProcessorService.UnitTests</RootNamespace>
+	  <CodeAnalysisRuleSet>../UnitTests.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
+	  <IsPackable>false</IsPackable>
+	<Nullable>enable</Nullable>
+	  <ProjectGuid>{D1558F08-5B7E-4275-A026-87F7C1AB2C9B}</ProjectGuid>
+	<AssemblyName>DFC.Content.Pkg.Netcore.ApiProcessorService.UnitTests</AssemblyName>
   </PropertyGroup>
 
-  <ItemGroup>
+	<ItemGroup>
+		<AdditionalFiles Include="..\stylecop.json" Link="stylecop.json" />
+	</ItemGroup>
+
+	<ItemGroup>
     <PackageReference Include="FakeItEasy" Version="6.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.7" />
+		<PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.7" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
-    <PackageReference Include="xunit" Version="2.4.1" />
+		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
