--- a/dfc-content-pkg-netcore/dfc-content-pkg-netcore.csproj
+++ b/dfc-content-pkg-netcore/dfc-content-pkg-netcore.csproj
@@ -1,14 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <RootNamespace>DFC.Content.Pkg.Netcore</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>1.1.0</Version>
 	<Nullable>enable</Nullable>
 	<AssemblyName>DFC.Content.Pkg.Netcore</AssemblyName>
-	  <CodeAnalysisRuleSet>../DFC.Digital.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
-	  <ProjectGuid>{14DC1FC5-B9C8-428C-ABB9-255AE80D7D15}</ProjectGuid>
+	<OutputType>Library</OutputType>
+	<CodeAnalysisRuleSet>../DFC.Digital.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
+	<ProjectGuid>{14DC1FC5-B9C8-428C-ABB9-255AE80D7D15}</ProjectGuid>
   </PropertyGroup>
 
 	<ItemGroup>
