--- a/dfc-content-pkg-netcore-unitTests/dfc-content-pkg-netcore-unitTests.csproj
+++ b/dfc-content-pkg-netcore-unitTests/dfc-content-pkg-netcore-unitTests.csproj
@@ -6,6 +6,7 @@
     <ProjectGuid>{9F73BF47-B6EF-4F40-9A51-F026B21A91CF}</ProjectGuid>
     <IsPackable>false</IsPackable>
     <AssemblyName>DFC.Content.Pkg.Netcore.UnitTests</AssemblyName>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
