--- a/dfc-content-pkg-netcore/dfc-content-pkg-netcore.csproj
+++ b/dfc-content-pkg-netcore/dfc-content-pkg-netcore.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>DFC.Content.Pkg.Netcore</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>1.2.0</Version>
