fix attempt3 trying to force use of different dfc-devops branch

--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -9,7 +9,7 @@ resources:
   - repository: dfc-devops
     type: github
     name: SkillsFundingAgency/dfc-devops
-    ref: refs/dotnetUpgrade
+    ref: dotnetUpgrade
     endpoint: 'GitHub (ESFA)'
 
 stages:
