--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -9,7 +9,7 @@ resources:
   - repository: dfc-devops
     type: github
     name: SkillsFundingAgency/dfc-devops
-    ref: dotnetUpgrade
+    ref: refs/tags/v1.11.2
     endpoint: 'GitHub (ESFA)'
 
 stages:
@@ -28,4 +28,5 @@ stages:
         SolutionBaseName: $(SolutionBaseName)
         BuildPlatform: 'any cpu'
         BuildConfiguration: 'release'
+        DotNetCoreVersion: '6.0.100'
         TestSuffix: 'UnitTests'
