--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -9,7 +9,7 @@ resources:
   - repository: dfc-devops
     type: github
     name: SkillsFundingAgency/dfc-devops
-    ref: refs/tags/v1.11.2
+    ref: refs/tags/v1.8.5
     endpoint: 'GitHub (ESFA)'
 
 stages:
@@ -17,15 +17,22 @@ stages:
   displayName: Build, Test and Analyze
   jobs:
   - job: BuildTestAndAnalyze
-    pool:
-      name: NCS - CI and CD
-      demands:
-      - msbuild
-      - visualstudio
     steps:
     - template: AzureDevOpsTemplates\Build\StepTemplates\dfc-dotnetcore-build-sonar.yml@dfc-devops
       parameters:
         SolutionBaseName: $(SolutionBaseName)
         BuildPlatform: 'any cpu'
         BuildConfiguration: 'release'
-        TestSuffix: 'UnitTests'
+        TestSuffix: UnitTests
+    - task: NuGetCommand@2
+      displayName: 'NuGet pack'
+      inputs:
+        command: pack
+        packagesToPack: '**/*.nuspec'
+        packDestination: '$(build.artifactstagingdirectory)\DeploymentPackages\Nuget'
+        versioningScheme: byEnvVar
+        versionEnvVar: GitVersion.MajorMinorPatch
+    - task: PublishPipelineArtifact@1
+      inputs:
+        targetPath: $(build.artifactstagingdirectory)\DeploymentPackages\Nuget
+        artifactName: $(SolutionBaseName).Nuget
