--- a/dfc-content-pkg-netcore-unitTests/DFC.Content.Pkg.Netcore.UnitTests.csproj
+++ b/dfc-content-pkg-netcore-unitTests/DFC.Content.Pkg.Netcore.UnitTests.csproj
@@ -37,7 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\dfc-content-pkg-netcore\dfc-content-pkg-netcore.csproj" />
+    <ProjectReference Include="..\dfc-content-pkg-netcore\DFC.Content.Pkg.Netcore.csproj" />
   </ItemGroup>
 
 </Project>
