Update project config

--- a/DFC.Content.Pkg.Netcore.UnitTests/DFC.Content.Pkg.Netcore.UnitTests.csproj
+++ b/DFC.Content.Pkg.Netcore.UnitTests/DFC.Content.Pkg.Netcore.UnitTests.csproj
@@ -37,7 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\dfc-content-pkg-netcore\DFC.Content.Pkg.Netcore.csproj" />
+    <ProjectReference Include="..\DFC.Content.Pkg.Netcore\DFC.Content.Pkg.Netcore.csproj" />
   </ItemGroup>
 
 </Project>
