--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -68,6 +68,5 @@ stages:
             inputs:
               command: push
               packagesToPush: '$(Pipeline.Workspace)\$(SolutionBaseName).Nuget\*.nupkg;!$(Pipeline.Workspace)\$(SolutionBaseName).Nuget\*.symbols.nupkg'
-              nuGetFeedType: external
-              publishFeedCredentials: 'DFC Nuget'
-
+              nuGetFeedType: internal
+              publishVstsFeed: 'NationalCareersService'
